# vertex-ai-test

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yaml  main.py  pyproject.toml  requirements.txt
claude-results/: output.txt
dataset/: first.txt  second.txt  third.txt
results/: output_20241226_210803.txt
services/: transaction_processor.py  vertex_service.py
utils/: logger.py
